<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:contentPadding="8dp"
            android:layout_margin="8dp"
            app:strokeColor="@color/blond"
            app:strokeWidth="1dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/Ph"
                        android:textColor="@color/cadetBlue" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/phoneNumber"
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/phExample"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/email"
                        android:textColor="@color/cadetBlue" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/email"
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/emailExample"
                        android:textAlignment="center"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/vk"
                        android:textColor="@color/cadetBlue" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/vkPage"
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/vkExample"
                        android:textAlignment="center"
                        android:gravity="center"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <com.google.android.material.textview.MaterialTextView
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/hh"
                        android:textColor="@color/cadetBlue" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/hhPage"
                        style="@style/MaterialAlertDialog.MaterialComponents.Title.Text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginHorizontal="10dp"
                        android:text="@string/seeCV"
                        android:textAlignment="center"
                        android:gravity="center"/>
                </LinearLayout>

            </LinearLayout>


        </com.google.android.material.card.MaterialCardView>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>