<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/educationCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:contentPadding="8dp"
                app:strokeColor="@color/blond"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="@string/education"
                            android:textColor="@color/middleBlueGreen"
                            android:textSize="8sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/universityName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/university" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/outline_school_24"
                            android:tint="@color/middleBlueGreen" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="fill_parent"
                            android:background="@color/middleBlueGreen" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/specialityName"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/speciality"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/educationGrade"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/year_and_grade"
                                android:textColor="@color/black" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/educationYear"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/year"
                                android:textColor="@color/black" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/skillsCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/educationCard"
                android:layout_margin="8dp"
                app:contentPadding="8dp"
                app:strokeColor="@color/blond"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="left"
                            android:layout_marginBottom="2dp"
                            android:text="@string/skills"
                            android:textColor="@color/middleBlueGreen"
                            android:textSize="8sp" />

                        <com.google.android.material.textview.MaterialTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp" />


                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/outline_rowing_24"
                            android:tint="@color/middleBlueGreen" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="fill_parent"
                            android:background="@color/middleBlueGreen" />

                        <com.google.android.material.textview.MaterialTextView
                            android:id="@+id/skillList"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="15dp"
                            android:text="@string/skillso"
                            android:textColor="@color/black"
                            android:textSize="16sp" />
                    </LinearLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/languageCard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/skillsCard"
                android:layout_margin="8dp"
                app:contentPadding="8dp"
                app:strokeColor="@color/blond"
                app:strokeWidth="1dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:layout_width="66dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="2dp"
                            android:text="@string/lang"
                            android:textColor="@color/middleBlueGreen"
                            android:textSize="8sp" />

                        <TextView
                            android:id="@+id/langName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginHorizontal="14dp"
                            android:text="@string/language" />

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_marginRight="15dp"
                            android:src="@drawable/outline_language_24"
                            android:tint="@color/middleBlueGreen" />

                        <View
                            android:layout_width="1dp"
                            android:layout_height="fill_parent"
                            android:background="@color/middleBlueGreen" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/langCode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/langCode"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/langComment"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginHorizontal="15dp"
                                android:text="@string/langComment"
                                android:textColor="@color/black"
                                android:textSize="16sp" />

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>
    </ScrollView>
</layout>